# OmnixStorageSDK

./: .gitignore  AWS-S3-PRESIGNED-URL-IMPROVEMENTS.md  BEFORE-AFTER-COMPARISON.md  Minio-NET-Implementation-Reference.md  OmnixStorage-SDK-Analysis-Feedback.md  PresignedUrlBrowserTest.cs  QUICK-REFERENCE.md  README.md  SDK-IMPROVEMENTS-SUMMARY.md  SDK-INTEGRATION-GUIDE.md
omnix-storage-dotnet/: LOCAL-NUGET-SETUP.md  OmnixStorage.2.0.0.nupkg  OmnixStorage.sln  PRESIGNED-URL-BROWSER-GUIDE.md  omnixstorage_v1.2.md  omnixstorage_v2.0.md
omnix-storage-dotnet/src/OmnixStorage/: AwsSignatureV4Signer.cs  EdgeSentienceStorageService.cs  IOmnixStorageClient.cs  OmnixStorage.csproj  OmnixStorageClient.cs  OmnixStorageClientExtensions.cs  OmnixStorageClientFactory.cs  OmnixStorageIntegrationService.cs
omnix-storage-dotnet/src/OmnixStorage/Args/: CreateTenantArgs.cs  OperationArgs.cs
omnix-storage-dotnet/src/OmnixStorage/DataModel/: DataModels.cs  Tenant.cs
omnix-storage-dotnet/src/OmnixStorage/Exceptions/: OmnixStorageException.cs
omnix-storage-dotnet/tests/OmnixStorage.Tests/: OmnixStorage.Tests.csproj  Program.cs  sigv4-debug.txt  test-results.txt
omnix-storage-py/: README.md  pyproject.toml  setup.py
omnix-storage-py/src/omnix_storage.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
omnix-storage-py/src/omnixstorage/: __init__.py  _http.py  _signer.py  client.py  error.py  models.py
omnix-storage-py/tests/: test_integration_smoke.py  test_presigned_parity.py
